--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,38 +1,36 @@
-<div class="navbar-Qhome9">
-
-<%#= link_to root_path,  %>
-  <!-- Logo -->
-  <%= link_to root_path, class: "navbar-Qhome9-logo" do %>
-  <%= image_tag "logo.png" %>
-  <% end %>
-
+<div class="navbar-sas">
   <!-- Right Navigation -->
-  <div class="navbar-Qhome9-right hidden-xs hidden-sm">
+  <div class="navbar-wagon-right hidden-xs hidden-sm">
 
 
     <!-- Profile picture and dropdown -->
-    <div class="navbar-Qhome9-item">
-      <div class="dropdown">
-        <img src="http://placehold.it/50x50" class="avatar dropdown-toggle" id="navbar-Qhome9-menu" data-toggle="dropdown">
-        <ul class="dropdown-menu dropdown-menu-right navbar-Qhome9-dropdown-menu">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Réhabilitation</a></li>
-          <li><a href="#">Meubles</a></li>
-          <li><a href="#">Design d'intérieur</a></li>
-        </ul>
+    <div class="navbar">
+      <div class="navbar-content">
+        <div class="navbar-link">
+          <a href="#about" class="navbar-item">about</a>
+        </div>
+        <div class="navbar-link">
+          <a href="#skills" class="navbar-item">skills</a>
+        </div>
+        <div class="navbar-link">
+          <a href="" class="navbar-item">experience</a>
+        </div>
+        <div class="navbar-link">
+          <a href="" class="navbar-item">contact</a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Dropdown appearing on mobile only -->
-<!--   <div class="navbar-Qhome9-item hidden-md hidden-lg">
+
+    <!-- Dropdown list appearing on mobile only -->
+  <!-- <div class="navbar-wagon-item hidden-md hidden-lg">
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-Qhome9-dropdown-menu">
+      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
         <li><a href="#">Some mobile link</a></li>
         <li><a href="#">Other one</a></li>
         <li><a href="#">Other one</a></li>
       </ul>
     </div>
-  </div>
-</div> -->
+  </div> -->
+</div>
