navbar, font, and banner pictures

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 // Graphical variables
-// @import "config/variables";
+@import "config/variables";
 // @import "config/bootstrap_variables";
 
 // External libraries
@@ -10,5 +10,5 @@
 
 // Your CSS
 @import "shared/navbar";
-
+@import "pages";
 
