--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,10 +1,10 @@
-<div class="navbar-sas">
+<!-- <div class="navbar-sas"> -->
   <!-- Right Navigation -->
-  <div class="navbar-wagon-right hidden-xs hidden-sm">
+  <!-- <div class="navbar-wagon-right hidden-xs hidden-sm"> -->
 
 
     <!-- Profile picture and dropdown -->
-    <div class="navbar">
+   <!--  <div class="navbar">
       <div class="navbar-content">
         <div class="navbar-link">
           <a href="#about" class="navbar-item">about</a>
@@ -19,7 +19,7 @@
           <a href="" class="navbar-item">contact</a>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
     <!-- Dropdown list appearing on mobile only -->
@@ -33,4 +33,4 @@
       </ul>
     </div>
   </div> -->
-</div>
+<!-- </div> -->
