--- a/app/assets/stylesheets/shared/_navbar.scss
+++ b/app/assets/stylesheets/shared/_navbar.scss
@@ -1,5 +1,5 @@
 /* Main class */
-.navbar-sas {
+.navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   background: white;
   transition: all 0.3s ease;
@@ -11,72 +11,88 @@
 }
 
 /* Optional class to fix the navbar on top */
-.navbar {
+.navbar-wagon-fixed {
   position: fixed;
-  right: 0px;
+  left: 0px;
   top: 0px;
   z-index: 1;
   width: 100%;
 }
 
-.navbar-item {
-  margin: 7px;
-}
+/* Navbar logo */
+/*.navbar-wagon-brand img {
+  width: 50px;
+  }*/
 
-.navbar-item:hover{
-  text-decoration: none;
-  color: black;
-}
+  /* Navbar right section (with form, links, button) */
+  .navbar-wagon-right {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 
-.navbar-link a {
-  text-decoration: none;
-  color: #5A5C51;
-  transition: all 100ms ease;
-}
+  /* Navbar item */
+  .navbar-wagon-item {
+    flex: 0 1 auto;
+    cursor: pointer;
+    padding: 0 20px;
+  }
 
-.navbar-link {
-  border-bottom: 0px solid black;
-  text-decoration: none;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  border: 1px solid transparent;
-  text-decoration: none;
-}
+  /* Navbar standard link */
+  .navbar-wagon-link {
+    color: #616668;
+    font-size: 14px;
+  }
+  .navbar-wagon-link:hover {
+    color: #da552f;
+    text-decoration: none;
+  }
+
+  /* Navbar right button */
+  .navbar-wagon-button {
+    margin-left: 10px;
+    padding: 0 20px;
+    border-radius: 20em;
+    line-height: 40px;
+    background-color: #D23333;
+    color: white;
+    font-size: 14px;
+    border: 2px solid #D23333;
+  }
+  .navbar-wagon-button:hover {
+    color: white;
+    background: #D23333;
+    border-color: #ac2626;
+  }
 
 
-
-
-/* Navbar dropdown menu */
-.navbar-wagon-dropdown-menu {
-  margin-top: 15px;
-  box-shadow: 1px 1px 4px #E6E6E6;
-  border-color: #E6E6E6;
-}
-.navbar-wagon-dropdown-menu li > a {
-  transition: color 0.3s ease;
-  font-weight: lighter !important;
-  color: #999999 !important;
-  font-size: 15px !important;
-  line-height: 22px !important;
-  padding: 10px 20px;
-}
-.navbar-wagon-dropdown-menu li > a :hover {
-  background: transparent !important;
-  color: black !important;
-}
-.navbar-wagon-dropdown-menu:before {
-  content: ' ';
-  height: 10px;
-  width: 10px;
-  position: absolute;
-  right: 10px;
-  top: -6px;
-  background-color: white;
-  transform: rotate(45deg);
-  border-left: 1px solid #E6E6E6;
-  border-top: 1px solid #E6E6E6;
-}
-
-// .navbar-wagon-brand img {
-//   width: 60px;
-// }
+  /* Navbar dropdown menu */
+  .navbar-wagon-dropdown-menu {
+    margin-top: 15px;
+    box-shadow: 1px 1px 4px #E6E6E6;
+    border-color: #E6E6E6;
+  }
+  .navbar-wagon-dropdown-menu li > a {
+    transition: color 0.3s ease;
+    font-weight: lighter !important;
+    color: #999999 !important;
+    font-size: 15px !important;
+    line-height: 22px !important;
+    padding: 10px 20px;
+  }
+  .navbar-wagon-dropdown-menu li > a:hover {
+    background: transparent !important;
+    color: black !important;
+  }
+  .navbar-wagon-dropdown-menu:before {
+    content: ' ';
+    height: 10px;
+    width: 10px;
+    position: absolute;
+    right: 10px;
+    top: -6px;
+    background-color: white;
+    transform: rotate(45deg);
+    border-left: 1px solid #E6E6E6;
+    border-top: 1px solid #E6E6E6;
+  }
