--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,36 +1,33 @@
-<!-- <div class="navbar-sas"> -->
+<div class="navbar-wagon navbar-wagon-fixed">
+  <!-- Logo -->
+  <div class= "navbar-wagon-brand">
+    <h1>Saskia Roelofs</h1>
+  </div>
   <!-- Right Navigation -->
-  <!-- <div class="navbar-wagon-right hidden-xs hidden-sm"> -->
+  <div class="navbar-wagon-right hidden-xs hidden-sm">
 
+    <!-- Text link -->
+    <a href="" class="navbar-wagon-item navbar-wagon-link">About</a>
 
-    <!-- Profile picture and dropdown -->
-   <!--  <div class="navbar">
-      <div class="navbar-content">
-        <div class="navbar-link">
-          <a href="#about" class="navbar-item">about</a>
-        </div>
-        <div class="navbar-link">
-          <a href="#skills" class="navbar-item">skills</a>
-        </div>
-        <div class="navbar-link">
-          <a href="" class="navbar-item">experience</a>
-        </div>
-        <div class="navbar-link">
-          <a href="" class="navbar-item">contact</a>
-        </div>
-      </div>
-    </div> -->
+    <!-- Text link -->
+    <a href="" class="navbar-wagon-item navbar-wagon-link">Experience</a>
 
+    <!-- Text link -->
+    <a href="" class="navbar-wagon-item navbar-wagon-link">Contact</a>
 
-    <!-- Dropdown list appearing on mobile only -->
-  <!-- <div class="navbar-wagon-item hidden-md hidden-lg">
+    <!-- Button (call-to-action) -->
+    <a href="" class="navbar-wagon-item navbar-wagon-button btn">Resume</a>
+  </div>
+
+  <!-- Dropdown appearing on mobile only -->
+  <div class="navbar-wagon-item hidden-md hidden-lg">
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Some mobile link</a></li>
-        <li><a href="#">Other one</a></li>
-        <li><a href="#">Other one</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Experience</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </div>
-  </div> -->
-<!-- </div> -->
+  </div>
+</div>
