--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,18 @@
-<div class="home">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-6">
-        <h1>I am something</h1>
-      </div>
-      <div class="col-xs-6">
-        <h1>Dont forget me</h1>
-      </div>
-    </div>
-  </div>
+<div class="wrapper-home">
+	<div class="home">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-6">
+					<div class="text-home">
+						<h1>I am some future text</h1>
+					</div>
+				</div>
+				<div class="col-xs-6">
+					<div class="image-home">
+						<h1>I should become an image</h1>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
