--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,19 @@
 <div class="wrapper-home">
 	<div class="home">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-6">
-					<div class="text-home">
-						<h1>I am some future text</h1>
+		<div class="home-content">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-6">
+						<div class="text-home">
+							<h1>Saskia Roelofs</h1>
+							<p>Coach and social worker</p>
+							<button type="button" class="btn btn-outline-secondary">Secondary</button>
+						</div>
 					</div>
-				</div>
-				<div class="col-xs-6">
-					<div class="image-home">
-						<h1>I should become an image</h1>
+					<div class="col-xs-6">
+						<div class="image-home">
+							<%= image_tag "http://placehold.it/350x500" %>
+						</div>
 					</div>
 				</div>
 			</div>
