--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,54 +1,49 @@
-/* -------------------------------------
- * CSS code specific to home page
- * (margin/padding adjustments)
- * ------------------------------------- */
-
-.home {
+ .home {
   padding-top: 70px;
 }
-
 .home-content {
   padding-top: 150px;
 }
 .homepage-hero-module {
-    border-right: none;
-    border-left: none;
-    position: relative;
+  border-right: none;
+  border-left: none;
+  position: relative;
 }
 .no-video .video-container video,
 .touch .video-container video {
-    display: none;
+  display: none;
 }
 .no-video .video-container .poster,
 .touch .video-container .poster {
-    display: block !important;
+  display: block !important;
 }
 .video-container {
-    position: relative;
-    bottom: 0%;
-    left: 0%;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    background: #000;
+  position: relative;
+  bottom: 0%;
+  left: 0%;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  opacity: 0.5;
+  background-image: url("/assets/images/Sunset-Lapse.jpg");
 }
 .video-container .poster img {
-    width: 100%;
-    bottom: 0;
-    position: absolute;
+  width: 100%;
+  bottom: 0;
+  position: absolute;
 }
 .video-container .filter {
-    z-index: 100;
-    position: absolute;
-    background: rgba(0, 0, 0, 0.4);
-    width: 100%;
+  z-index: 100;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.4);
+  width: 100%;
 }
 .video-container video {
-    position: absolute;
-    z-index: 0;
-    bottom: 0;
+  position: absolute;
+  z-index: 0;
+  bottom: 0;
 }
 .video-container video.fillWidth {
-    width: 100%;
+  width: 100%;
 }
 
