Add overlay for text on video

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -33,7 +33,7 @@
   position: absolute;
 }
 .video-container .filter {
-  z-index: 100;
+  z-index: 0;
   position: absolute;
   background: rgba(0, 0, 0, 0.4);
   width: 100%;
@@ -47,3 +47,9 @@
   width: 100%;
 }
 
+.overlay {
+  position:absolute;
+  top:250px;
+  left:250px;
+  z-index:1;
+}
