--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -24,7 +24,7 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
-  opacity: 0.5;
+  opacity: 0.7;
   background-image: url("/assets/images/Sunset-Lapse.jpg");
 }
 .video-container .poster img {
@@ -47,9 +47,30 @@
   width: 100%;
 }
 
-.overlay {
-  position:absolute;
-  top:250px;
-  left:250px;
-  z-index:1;
+.home-titlecontainer {
+  text-align: center;
+  position: absolute;
+  z-index: 1000;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  color: #fff;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+.btn-medium {
+  color: #fafafa;
+  border: 2px solid #fafafa;
+  padding: 10px 15px;
+  border-radius: 50px;
+  font-weight: lighter;
+  opacity: 0.6;
+}
+
+.btn-medium:hover {
+  opacity: 1;
+  text-decoration: none;
+  color: #fafafa;
 }
