--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,8 +7,10 @@
         <source src="<%= video_path 'Sunset-Lapse.webm' %>" type="video/webm" />
           Your browser does not support the video tag. I suggest you upgrade your browser.
         </video>
-        <div class="overlay">
-          <h2>hshshshshshsh</h2>
+        <div class="home-titlecontainer">
+          <h1>Saskia Roelofs</h1>
+          <h4>Coach & fantastisch mens</h4>
+          <%= link_to "Over mij", about_path, class: 'btn-medium'%>
         </div>
         <div class="poster hidden">
           <%= image_tag 'Sunset-Lapse.jpg' %>
