--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -1,20 +1,8 @@
-/* -------------------------------------
- * Fonts
- * ------------------------------------- */
 // Google fonts
-@import url("https://fonts.googleapis.com/css?family=Roboto");
-$base-font: "Roboto", "sans-serif";
-$header-font: "Roboto", "sans-serif";
+@import url("https://fonts.googleapis.com/css?family=Montserrat|Open+Sans");
+$base-font: "Open Sans", "sans-serif";
+$header-font: "Montserrat", "sans-serif";
 
-// Local fonts (uncomment following lines)
-// @font-face {
-//   font-family: "Font Name";
-//   src: font-url('FontFile.eot');
-//   src: font-url('FontFile.eot?#iefix') format('embedded-opentype'),
-//        font-url('FontFile.woff') format('woff'),
-//        font-url('FontFile.ttf') format('truetype')
-// }
-// $my-font: "Font Name";
 
 // Font-size and line-height
 $base-size: 16px;
