--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,13 +7,15 @@
         <source src="<%= video_path 'Sunset-Lapse.webm' %>" type="video/webm" />
           Your browser does not support the video tag. I suggest you upgrade your browser.
         </video>
-        <div class="home-titlecontainer">
-          <h1>Saskia Roelofs</h1>
-          <h4>Coach & fantastisch mens</h4>
-          <%= link_to "Over mij", about_path, class: 'btn-medium'%>
-        </div>
         <div class="poster hidden">
           <%= image_tag 'Sunset-Lapse.jpg' %>
+        </div>
+        <div class="home-titlecontainer">
+          <h1>Saskia Roelofs</h1>
+          <br>
+          <h3>Loop je tegen moeilijke situaties aan? Kan je hier wel een <strong> coach </strong> voor gebruiken die je hierdoor heen helpt?</h3>
+          <br>
+          <%= link_to "Over mij", about_path, class: 'btn-medium'%>
         </div>
       </div>
     </div>
