--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon navbar-wagon-fixed">
   <!-- Logo -->
   <div class= "navbar-wagon-brand">
-    <h1>SR</h1>
+      <h1><%= link_to "SR", root_path, class: 'navbar-wagon-brand'%></h1>
   </div>
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
