fix path in navbar

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,10 +10,10 @@
     <%= link_to "Over mij", about_path, class: 'navbar-wagon-item navbar-wagon-link'%>
 
     <!-- Text link -->
-    <%= link_to "Ervaring", about_path, class: 'navbar-wagon-item navbar-wagon-link'%>
+    <%= link_to "Ervaring", experience_path, class: 'navbar-wagon-item navbar-wagon-link'%>
 
     <!-- Text link -->
-    <%= link_to "Contact", about_path, class: 'navbar-wagon-item navbar-wagon-link'%>
+    <%= link_to "Contact", contact_path, class: 'navbar-wagon-item navbar-wagon-link'%>
 
     <!-- Button (call-to-action) -->
     <%= link_to "C.V.", about_path, class: 'btn-medium'%>
