--- a/app/assets/stylesheets/layout/_navbar_dark.scss
+++ b/app/assets/stylesheets/layout/_navbar_dark.scss
@@ -1,4 +1,4 @@
-.navbar-wagon {
+.navbar-wagon-dark {
   box-shadow: 0 1px 3px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   background: transparent;
   transition: all 0.3s ease;
@@ -7,53 +7,54 @@
   padding: 0px 30px;
   align-items: center;
   justify-content: space-between;
-  color: #E5EEC1;
+  color: #5A5050;
   position: fixed;
   left: 0px;
   top: 0px;
   z-index: 1;
   width: 100%;
-.navbar-wagon-brand{
-  color: #E5EEC1;
-}
 
-.navbar-wagon-brand:hover {
-  color: #5A5050;
-  text-decoration: none;
-}
+  .navbar-wagon-brand{
+    color: #5A5050;
+  }
 
-.navbar-wagon-right {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
+  .navbar-wagon-brand:hover {
+    color: #E5EEC1;
+    text-decoration: none;
+  }
 
-.navbar-wagon-item {
-  flex: 0 1 auto;
-  cursor: pointer;
-  padding: 0 20px;
-}
+  .navbar-wagon-right {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .navbar-wagon-item {
+    flex: 0 1 auto;
+    cursor: pointer;
+    padding: 0 20px;
+  }
 
 // Color choices need to be changed here
 .navbar-wagon-link {
-  color: #E5EEC1;
+  color: #5A5050;
   font-size: 16px;
 }
 .navbar-wagon-link:hover {
-  color: #5A5050;
+  color: #E5EEC1;
   text-decoration: none;
 }
 
 /* Navbar dropdown menu */
 .navbar-wagon-dropdown-menu {
   margin-top: 15px;
-  box-shadow: 1px 1px 4px #E5EEC1;
-  border-color: #E5EEC1;
+  box-shadow: 1px 1px 4px #5A5050;
+  border-color: #5A5050;
 }
 .navbar-wagon-dropdown-menu li > a {
   transition: color 0.3s ease;
   font-weight: lighter !important;
-  color: #5A5050 !important;
+  color: #E5EEC1 !important;
   font-size: 15px !important;
   line-height: 22px !important;
   padding: 10px 20px;
