--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= csrf_meta_tags %>
   <!-- META TAGS  -->
 </head>
-<body>
+<body class="<%= params[:controller] %>-<%= params[:action] %>">
   <!-- http://stackoverflow.com/questions/31280230/rails-4-bootstrap-3-how-to-display-a-different-navigation-bar-on-different-pa -->
     <%= render 'shared/navbar' %>
   <%= yield %>
