--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
                   <%= image_tag 'Sunset-Lapse.jpg' %>
                 </div>
                 <div class="home-titlecontainer">
-                  <h1><strong>Saskia Roelofs</h1></strong>
+                <h1>Saskia Roelofs</h1>
                   <br>
                   <h3>Loop je tegen moeilijke situaties aan? Kan je wel een <strong> coach </strong> gebruiken die je hierdoor heen helpt?</h3>
                   <br>
