--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,9 @@
 
+<% if params[:controller] = "pages" && params[:action] == "home" %>
 <div class="navbar-wagon navbar-wagon-fixed">
+<% else %>
+<div class="navbar-wagon-dark navbar-wagon-fixed">
+<% end %>
   <!-- Logo -->
   <div class= "navbar-wagon-brand">
     <h1><%= link_to "SR", root_path, class: 'navbar-wagon-brand'%></h1>
