Create fake experience data + delete coverr animation

--- a/app/views/pages/experience.html.erb
+++ b/app/views/pages/experience.html.erb
@@ -1,61 +1,118 @@
-<!-- <div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <h2>Ervaring</h2>
+<div class="experience-page">
+  <div class="experience-container">
+    <div class="experience-titel">
+      Ervaring in coaching
     </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-12 col-md-4">
-      <p>ICON</p>
-      <p>TITLE</p>
-      <p>Uitleg</p>
-    </div>
-    <div class="col-xs-12 col-md-4">
-      <p>ICON</p>
-      <p>TITLE</p>
-      <p>Uitleg</p>
-    </div>
-    <div class="col-xs-12 col-md-4">
-      <p>ICON</p>
-      <p>TITLE</p>
-      <p>Uitleg</p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-12 col-md-4">
-      <p>ICON</p>
-      <p>TITLE</p>
-      <p>Uitleg</p>
-    </div>
-    <div class="col-xs-12 col-md-4">
-      <p>ICON</p>
-      <p>TITLE</p>
-      <p>Uitleg</p>
-    </div>
-    <div class="col-xs-12 col-md-4">
-      <p>ICON</p>
-      <p>TITLE</p>
-      <p>Uitleg</p>
-    </div>
-  </div>
-</div>
--->
-<div class="experience-container">
     <div class="timeline">
       <dl>
+        <dt>2016</dt>
         <dd class="pos-right clearfix">
           <div class="circ"></div>
           <div class="time">apr 2016</div>
           <div class="events">
             <div class="pull-left">
-              <img src="" alt="" class="events-object img-rounded">
+              <img src="http://www.klacht.nl/wp-content/gdcs/logos/1397810683_85695949.jpg" alt="" class="events-object img-rounder">
             </div>
             <div class="events-body">
-              <h4 class="events-heading">Potato</h4>
-              <p>potatopotatopoatotpaopopatopato</p>
+              <h4 class="events-heading">Bureau Jeugdzorg</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam eius suscipit, est quaerat libero rem qui atque quasi! Fugiat deserunt, cupiditate. Velit animi, amet perferendis obcaecati non fugiat dolorem ab!</p>
+            </div>
+          </div>
+        </dd>
+        <dd class="pos-left clearfix">
+          <div class="circ"></div>
+          <div class="time">may 2016</div>
+          <div class="events">
+            <div class="pull-left">
+              <img src="http://www.klacht.nl/wp-content/gdcs/logos/1397810683_85695949.jpg" alt="" class="events-object img-rounder">
+            </div>
+            <div class="events-body">
+              <h4 class="events-heading">Bureau Jeugdzorg</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam eius suscipit, est quaerat libero rem qui atque quasi! Fugiat deserunt, cupiditate. Velit animi, amet perferendis obcaecati non fugiat dolorem ab!</p>
+            </div>
+          </div>
+        </dd>
+        <dd class="pos-right clearfix">
+          <div class="circ"></div>
+          <div class="time">apr 2016</div>
+          <div class="events">
+            <div class="pull-left">
+              <img src="http://www.klacht.nl/wp-content/gdcs/logos/1397810683_85695949.jpg" alt="" class="events-object img-rounder">
+            </div>
+            <div class="events-body">
+              <h4 class="events-heading">Bureau Jeugdzorg</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam eius suscipit, est quaerat libero rem qui atque quasi! Fugiat deserunt, cupiditate. Velit animi, amet perferendis obcaecati non fugiat dolorem ab!</p>
+            </div>
+          </div>
+        </dd>
+        <dd class="pos-left clearfix">
+          <div class="circ"></div>
+          <div class="time">may 2016</div>
+          <div class="events">
+            <div class="pull-left">
+              <img src="http://www.klacht.nl/wp-content/gdcs/logos/1397810683_85695949.jpg" alt="" class="events-object img-rounder">
+            </div>
+            <div class="events-body">
+              <h4 class="events-heading">Bureau Jeugdzorg</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam eius suscipit, est quaerat libero rem qui atque quasi! Fugiat deserunt, cupiditate. Velit animi, amet perferendis obcaecati non fugiat dolorem ab!</p>
+            </div>
+          </div>
+        </dd>
+         <dt>2015</dt>
+        <dd class="pos-right clearfix">
+          <div class="circ"></div>
+          <div class="time">apr 2016</div>
+          <div class="events">
+            <div class="pull-left">
+              <img src="http://www.klacht.nl/wp-content/gdcs/logos/1397810683_85695949.jpg" alt="" class="events-object img-rounder">
+            </div>
+            <div class="events-body">
+              <h4 class="events-heading">Bureau Jeugdzorg</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam eius suscipit, est quaerat libero rem qui atque quasi! Fugiat deserunt, cupiditate. Velit animi, amet perferendis obcaecati non fugiat dolorem ab!</p>
+            </div>
+          </div>
+        </dd>
+        <dd class="pos-left clearfix">
+          <div class="circ"></div>
+          <div class="time">may 2016</div>
+          <div class="events">
+            <div class="pull-left">
+              <img src="http://www.klacht.nl/wp-content/gdcs/logos/1397810683_85695949.jpg" alt="" class="events-object img-rounder">
+            </div>
+            <div class="events-body">
+              <h4 class="events-heading">Bureau Jeugdzorg</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam eius suscipit, est quaerat libero rem qui atque quasi! Fugiat deserunt, cupiditate. Velit animi, amet perferendis obcaecati non fugiat dolorem ab!</p>
+            </div>
+          </div>
+        </dd>
+        <dd class="pos-right clearfix">
+          <div class="circ"></div>
+          <div class="time">apr 2016</div>
+          <div class="events">
+            <div class="pull-left">
+              <img src="http://www.klacht.nl/wp-content/gdcs/logos/1397810683_85695949.jpg" alt="" class="events-object img-rounder">
+            </div>
+            <div class="events-body">
+              <h4 class="events-heading">Bureau Jeugdzorg</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam eius suscipit, est quaerat libero rem qui atque quasi! Fugiat deserunt, cupiditate. Velit animi, amet perferendis obcaecati non fugiat dolorem ab!</p>
+            </div>
+          </div>
+        </dd>
+        <dd class="pos-left clearfix">
+          <div class="circ"></div>
+          <div class="time">may 2016</div>
+          <div class="events">
+            <div class="pull-left">
+              <img src="http://www.klacht.nl/wp-content/gdcs/logos/1397810683_85695949.jpg" alt="" class="events-object img-rounder">
+            </div>
+            <div class="events-body">
+              <h4 class="events-heading">Bureau Jeugdzorg</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam eius suscipit, est quaerat libero rem qui atque quasi! Fugiat deserunt, cupiditate. Velit animi, amet perferendis obcaecati non fugiat dolorem ab!</p>
             </div>
           </div>
         </dd>
       </dl>
+
+    </div>
   </div>
 </div>
