--- a/app/assets/stylesheets/bootflat/css/bootflat.css
+++ b/app/assets/stylesheets/bootflat/css/bootflat.css
@@ -2409,7 +2409,7 @@ a.list-group-item-danger.active, a.list-group-item-danger:hover, a.list-group-it
   width: 22px;
   height: 22px;
   margin-left: -11px;
-  background-color: #4fc1e9;
+  background-color: $blue;
   border: 4px solid #f5f7fa;
           border-radius: 50%;
 
@@ -2423,7 +2423,7 @@ a.list-group-item-danger.active, a.list-group-item-danger:hover, a.list-group-it
   display: inline-block;
   width: 100px;
   padding: 10px 20px;
-  color: #4fc1e9;
+  color: $blue;
 }
 .timeline dl dd .events {
   position: relative;
