just add fix me reminder

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,6 +8,7 @@
   <div class= "navbar-wagon-brand">
     <h1><%= link_to "SR", root_path, class: 'navbar-wagon-brand'%></h1>
   </div>
+  <!-- FIX ME when clicking on SR: video does not reload on main page -->
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
     <!-- Text link -->
