add favicon + center experience timeline

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,10 +5,18 @@
         <%= image_tag 'https://placehold.it/150x150' %>
       </div>
       <div class="col-xs-12 col-md-7">
-        <h2>Over mij</h2>
-        <p>teeeeeeeeeeeekst
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque sint nihil, praesentium voluptatibus in placeat ea iste fugiat modi magnam cum ipsa necessitatibus blanditiis aliquid esse numquam itaque doloribus sapiente.teeeeeeeeeeeekst
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque sint nihil, praesentium voluptatibus in placeat ea iste fugiat modi magnam cum ipsa necessitatibus blanditiis aliquid esse numquam itaque doloribus sapiente.</p>
+        <div class="about-content">
+          <h2>Over mij</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque sint nihil, praesentium voluptatibus in placeat ea iste fugiat modi magnam cum ipsa necessitatibus blanditiis aliquid esse numquam itaque doloribus sapiente.teeeeeeeeeeeekst
+            Lore
+            m ipsum dolor sit amet, consectetur adipisicing elit. Eaque sint nihil, praesentium voluptatibus in placeat ea iste fugiat modi magnam cum ipsa necessitatibus blanditiis aliquid esse numquam itaque doloribus sapiente.
+          </p>
+        </div>
+        <div class="social-media-links">
+          <% link_to "linkedin" %>
         </div>
       </div>
     </div>
+  </div>
+</div>
