--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -27,7 +27,7 @@
   width: 100%;
   overflow: hidden;
   opacity: 0.7;
-  background-image: url("/assets/images/Sunset-Lapse.jpg");
+  // background-image: image-url("Sunset-Lapse.jpg");
 }
 .video-container .poster img {
   width: 100%;
