--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <!-- META TAGS  -->
+  <%= favicon_link_tag 'favicon.ico' %>
 </head>
 <body class="<%= params[:controller] %>-<%= params[:action] %>">
   <!-- http://stackoverflow.com/questions/31280230/rails-4-bootstrap-3-how-to-display-a-different-navigation-bar-on-different-pa -->
