Change to navbar + front end about page and title experience

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -3,11 +3,11 @@
   color: $black;
   padding: 12px 21px;
   border-radius: 5px;
-  font-weight: bold;
+  font-weight: 700;
+  font-size: 18px;
 }
-
 .btn-medium:hover {
   opacity: 1;
   text-decoration: none;
-  color: $white;
+  color: $blue;
 }
