--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,7 +2,7 @@
   <div class="content-about">
     <div class="row">
       <div class="col-xs-12 col-md-5">
-        <%= image_tag 'https://placehold.it/150x150' %>
+        <%= image_tag 'saskia-profile.jpg' %>
       </div>
       <div class="col-xs-12 col-md-7">
         <div class="about-content">
@@ -14,7 +14,7 @@
           </p>
         </div>
         <div class="social-media-links">
-          <% link_to "linkedin" %>
+          <a href="https://nl.linkedin.com/in/saskia-roelofs-a22aa712" %><i class="fa fa-linkedin fa fa-2x" aria-hidden="true"></i>
         </div>
       </div>
     </div>
