--- a/app/assets/stylesheets/layout/_navbar_dark.scss
+++ b/app/assets/stylesheets/layout/_navbar_dark.scss
@@ -1,5 +1,5 @@
 .navbar-wagon-dark {
-  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
+  // box-shadow: 0 1px 3px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   background: transparent;
   transition: all 0.3s ease;
   display: flex;
@@ -13,13 +13,15 @@
   top: 0px;
   z-index: 1;
   width: 100%;
+  font-size: 17px;
+  font-weight: 600;
 
   .navbar-wagon-brand{
     color: #5A5050;
   }
 
   .navbar-wagon-brand:hover {
-    color: #E5EEC1;
+    color: $blue;
     text-decoration: none;
   }
 
@@ -41,7 +43,7 @@
   font-size: 16px;
 }
 .navbar-wagon-link:hover {
-  color: #E5EEC1;
+  color: $blue;
   text-decoration: none;
 }
 
